retrieved vertex count with numpy-stl

--- a/notebooks/fun_with_stl.ipynb
+++ b/notebooks/fun_with_stl.ipynb
@@ -13,20 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "Pretty printing has been turned ON\n"
      ]
     }
    ],
    "source": [
     "# ask matplotlib to show figures in notebook\n",
-    "%pylab inline"
+    "%pylab inline\n",
+    "# ask jupyter to pretty print things\n",
+    "%pprint"
    ]
   },
   {
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +196,150 @@
     "\n",
     "# Show the plot to the screen\n",
     "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STL Metrics\n",
+    "\n",
+    "Now that we know how to programmatically interact with STL files, can we gather information about the STL files we've downloaded? Namely,\n",
+    "\n",
+    "* Number of vertices\n",
+    "* ASCII or binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<stl.mesh.Mesh at 0x1669fd30>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = mesh.Mesh.from_file('../data/processed/alpha_test_model.stl')\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['speedups', 'name', 'data'])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.__dict__.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'092311 - replicant - g - yoda - lk1.stl\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# file name\n",
+    "model.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is some flag for speeding up execution of numpy-stl\n",
+    "model.speedups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([([-0.03431365,  0.0769454 , -0.06179484], [[-3.8814151,  6.39319  , 16.244833 ], [-4.3469315,  6.2466817, 16.320898 ], [-4.3847075,  6.3675375, 16.492361 ]], [0]),\n",
+       "       ([ 0.01851021,  0.04470879,  0.04096463], [[ 3.0408778, 16.11172  ,  5.0861425], [ 3.0669327, 15.875168 ,  5.3325415], [ 3.2446575, 15.833855 ,  5.297324 ]], [0]),\n",
+       "       ([ 0.4561131 , -0.14415653,  0.24120784], [[ 7.851582 , -3.2437444, 29.76174  ], [ 8.051557 , -3.5191286, 29.219015 ], [ 8.215932 , -2.5392964, 29.49378  ]], [0]),\n",
+       "       ...,\n",
+       "       ([-0.00355939,  0.00384505, -0.00076373], [[ 3.3700223,  1.3644854,  5.2962484], [ 3.3746119,  1.3596653,  5.2505913], [ 3.2903962,  1.2817061,  5.2505913]], [0]),\n",
+       "       ([-0.00355433,  0.0038396 , -0.00076269], [[ 3.2859259,  1.2866371,  5.2962484], [ 3.3700223,  1.3644854,  5.2962484], [ 3.2903962,  1.2817061,  5.2505913]], [0]),\n",
+       "       ([-0.00393712,  0.00425312, -0.00103038], [[ 3.3638215,  1.3709977,  5.3468227], [ 3.3700223,  1.3644854,  5.2962484], [ 3.2859259,  1.2866371,  5.2962484]], [0])],\n",
+       "      dtype=[('normals', '<f4', (3,)), ('vectors', '<f4', (3, 3)), ('attr', '<u2', (1,))])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# these are the vertices\n",
+    "model.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89466"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is the number of vertices\n",
+    "len(model.data)"
    ]
   },
   {
