added thingi10k batch generator

--- a/notebooks/fun_with_stl.ipynb
+++ b/notebooks/fun_with_stl.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,21 +202,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring the Mesh Object"
+    "### Exploring the Mesh Object\n",
+    "\n",
+    "Documentation: https://numpy-stl.readthedocs.io/en/latest/stl.html#stl-mesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<stl.mesh.Mesh at 0x1669fd30>"
+       "<stl.mesh.Mesh at 0x1dca5ca24a8>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +239,7 @@
        "dict_keys(['speedups', 'name', 'data'])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
        "b'092311 - replicant - g - yoda - lk1.stl\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +281,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +293,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your mesh is not closed, the mass methods will not function\n",
+      "            correctly on this mesh.  For more info:\n",
+      "            https://github.com/WoLpH/numpy-stl/issues/69\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(14531.417705905495,\n",
+       " array([-0.35438355,  0.4520925 , 16.04603275]),\n",
+       " array([[2079421.26233704,    2730.35198466,   -8756.82082028],\n",
+       "        [   2730.35198466, 2033353.41250214,  362426.45188804],\n",
+       "        [  -8756.82082028,  362426.45188804, 1382852.82846094]]))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_mass_properties()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +342,7 @@
        "      dtype=[('normals', '<f4', (3,)), ('vectors', '<f4', (3, 3)), ('attr', '<u2', (1,))])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,30 +351,211 @@
     "# these are the vertices\n",
     "# each element in the array is a length 3 tuple\n",
     "# (normal vector, vertices, attrs)\n",
+    "# ([n1, n2, n3], [[v1x, v1y, v1z], [v2x, v2y, v2z], [v3x, v3y, v3z]], [])\n",
     "# from the code, attrs is always empty\n",
     "model.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "89466"
+       "(89466,)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# this is the number of vertices\n",
-    "len(model.data)"
+    "# interestingly, the array is 1 dimensional\n",
+    "# this number is the num of triangles in the shape\n",
+    "model.data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.void"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# each element is of type \"void\" \n",
+    "type(model.data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# and it has no shape?\n",
+    "model.data[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([-0.03431365,  0.0769454 , -0.06179484], [[-3.8814151,  6.39319  , 16.244833 ], [-4.3469315,  6.2466817, 16.320898 ], [-4.3847075,  6.3675375, 16.492361 ]], [0])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here is what one element looks like\n",
+    "model.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.03431365,  0.0769454 , -0.06179484],\n",
+       "       [-3.8814151 ,  6.39319   , 16.244833  ],\n",
+       "       [-4.3469315 ,  6.2466817 , 16.320898  ],\n",
+       "       [-4.3847075 ,  6.3675375 , 16.492361  ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to convert it into a flat array...\n",
+    "def reshape_mesh_triangle_array(triangle):\n",
+    "    new = np.asarray([triangle[0],\n",
+    "                      triangle[1][0],\n",
+    "                      triangle[1][1],\n",
+    "                      triangle[1][2]])\n",
+    "    return new\n",
+    "    \n",
+    "triangle = reshape_mesh_triangle_array(model.data[0])\n",
+    "print(triangle.shape)\n",
+    "triangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(89466, 4, 3)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now to convert the entire mesh into a normal np array\n",
+    "def mesh_to_nparray(mesh_data):\n",
+    "    return np.asarray([reshape_mesh_triangle_array(triangle) for triangle in mesh_data])\n",
+    "\n",
+    "mesh_to_nparray(model.data).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-3.8814151,  6.39319  , 16.244833 ],\n",
+       "        [-4.3469315,  6.2466817, 16.320898 ],\n",
+       "        [-4.3847075,  6.3675375, 16.492361 ]],\n",
+       "\n",
+       "       [[ 3.0408778, 16.11172  ,  5.0861425],\n",
+       "        [ 3.0669327, 15.875168 ,  5.3325415],\n",
+       "        [ 3.2446575, 15.833855 ,  5.297324 ]],\n",
+       "\n",
+       "       [[ 7.851582 , -3.2437444, 29.76174  ],\n",
+       "        [ 8.051557 , -3.5191286, 29.219015 ],\n",
+       "        [ 8.215932 , -2.5392964, 29.49378  ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 3.3700223,  1.3644854,  5.2962484],\n",
+       "        [ 3.3746119,  1.3596653,  5.2505913],\n",
+       "        [ 3.2903962,  1.2817061,  5.2505913]],\n",
+       "\n",
+       "       [[ 3.2859259,  1.2866371,  5.2962484],\n",
+       "        [ 3.3700223,  1.3644854,  5.2962484],\n",
+       "        [ 3.2903962,  1.2817061,  5.2505913]],\n",
+       "\n",
+       "       [[ 3.3638215,  1.3709977,  5.3468227],\n",
+       "        [ 3.3700223,  1.3644854,  5.2962484],\n",
+       "        [ 3.2859259,  1.2866371,  5.2962484]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# there's also a vectors attr...\n",
+    "model.vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -358,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
