--- a/notebooks/stl_vae.ipynb
+++ b/notebooks/stl_vae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{} does not exist\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'format'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-ab6cff77493c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mstl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_mesh_vectors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.stl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Documents\\personal\\gradschool\\berkeley\\W210\\3d-form\\src\\data\\stl.py\u001b[0m in \u001b[0;36mread_mesh_vectors\u001b[1;34m(stl_file)\u001b[0m\n\u001b[0;32m     30\u001b[0m     \"\"\"\n\u001b[0;32m     31\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstl_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{} does not exist'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstl_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmesh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMesh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstl_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'format'"
+     ]
+    }
+   ],
    "source": [
-    "# import data"
+    "# import data\n",
+    "import env\n",
+    "from data.thingi10k import thingi10k_batch_generator\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form\\\\Scripts\\\\python36.zip',\n",
+       " 'C:\\\\Program Files\\\\Python36\\\\DLLs',\n",
+       " 'C:\\\\Program Files\\\\Python36\\\\lib',\n",
+       " 'C:\\\\Program Files\\\\Python36',\n",
+       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form',\n",
+       " '',\n",
+       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form\\\\lib\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\Users\\\\jcworkma\\\\.ipython',\n",
+       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\notebooks\\\\src']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path"
    ]
   },
   {
