--- a/notebooks/stl_vae.ipynb
+++ b/notebooks/stl_vae.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "\n",
@@ -18,68 +19,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{} does not exist\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'format'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-ab6cff77493c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mstl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_mesh_vectors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.stl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\personal\\gradschool\\berkeley\\W210\\3d-form\\src\\data\\stl.py\u001b[0m in \u001b[0;36mread_mesh_vectors\u001b[1;34m(stl_file)\u001b[0m\n\u001b[0;32m     30\u001b[0m     \"\"\"\n\u001b[0;32m     31\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstl_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{} does not exist'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstl_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmesh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMesh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstl_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'format'"
+      "n_samples: 99\n",
+      "n_input: 500000\n",
+      "size: 200000000 bytes\n",
+      "size: 0.19 gb\n"
      ]
     }
    ],
    "source": [
     "# import data\n",
     "import env\n",
-    "from data.thingi10k import thingi10k_batch_generator\n"
+    "from data.thingi10k import thingi10k_batch_generator, thingi10k_max_length\n",
+    "from data import THINGI10K_INDEX_100\n",
+    "df = pd.read_csv(THINGI10K_INDEX_100)\n",
+    "n_samples = len(df)\n",
+    "#n_input = thingi10k_max_length(df)\n",
+    "# some models are quite large and cause this architecture to hit a memory error\n",
+    "# also tensors cannot be greater than 2 GB!\n",
+    "# to calculate size in bytes of tensor, take size of architecture layer * vector length * 4\n",
+    "n_input = 500000\n",
+    "print('n_samples: {}'.format(n_samples))\n",
+    "print('n_input: {}'.format(n_input))\n",
+    "size_bytes = n_input * 100 * 4\n",
+    "print('size: {} bytes'.format(size_bytes))\n",
+    "size_gb = size_bytes / 1024 / 1024 / 1024\n",
+    "print('size: {:.2f} gb'.format(size_bytes / 1024 / 1024 / 1024))\n",
+    "assert size_gb < 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form\\\\Scripts\\\\python36.zip',\n",
-       " 'C:\\\\Program Files\\\\Python36\\\\DLLs',\n",
-       " 'C:\\\\Program Files\\\\Python36\\\\lib',\n",
-       " 'C:\\\\Program Files\\\\Python36',\n",
-       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form',\n",
-       " '',\n",
-       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form\\\\lib\\\\site-packages',\n",
-       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\.3d-form\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
-       " 'C:\\\\Users\\\\jcworkma\\\\.ipython',\n",
-       " 'C:\\\\Users\\\\jcworkma\\\\Documents\\\\personal\\\\gradschool\\\\berkeley\\\\W210\\\\3d-form\\\\notebooks\\\\src']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +268,9 @@
     "        total_batch = int(n_samples / batch_size)\n",
     "        # Loop over all batches\n",
     "        for i in range(total_batch):\n",
-    "            batch_xs, _ = mnist.train.next_batch(batch_size)\n",
-    "\n",
+    "            #batch_xs, _ = mnist.train.next_batch(batch_size)\n",
+    "            batch_xs = thingi10k_batch_generator(THINGI10K_INDEX_100, batch_size, flat=True, pad_length=True)\n",
+    "            # thingi10k_batch_generator\n",
     "            # Fit training using batch data\n",
     "            cost = vae.partial_fit(batch_xs)\n",
     "            # Compute average loss\n",
@@ -316,10 +294,13 @@
     "         n_hidden_recog_2=500, # 2nd layer encoder neurons\n",
     "         n_hidden_gener_1=500, # 1st layer decoder neurons\n",
     "         n_hidden_gener_2=500, # 2nd layer decoder neurons\n",
-    "         n_input=784, # MNIST data input (img shape: 28*28)\n",
+    "         n_input=n_input, # length of STL vectors\n",
     "         n_z=20)  # dimensionality of latent space\n",
     "\n",
-    "vae = train(network_architecture, training_epochs=75)"
+    "# to consider when building the architecture\n",
+    "# tensors can only be so big!\n",
+    "# https://stackoverflow.com/questions/46941747/tensorflow-error-cannot-parse-tensor-from-proto\n",
+    "vae = train(network_architecture, training_epochs=75, batch_size=20)"
    ]
   },
   {
