created full thingi10k index

--- a/notebooks/stl_vae.ipynb
+++ b/notebooks/stl_vae.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,9 +27,9 @@
      "output_type": "stream",
      "text": [
       "n_samples: 99\n",
-      "n_input: 500000\n",
-      "size: 200000000 bytes\n",
-      "size: 0.19 gb\n"
+      "n_input: 50000\n",
+      "size: 20000000 bytes\n",
+      "size: 0.02 gb\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "# some models are quite large and cause this architecture to hit a memory error\n",
     "# also tensors cannot be greater than 2 GB!\n",
     "# to calculate size in bytes of tensor, take size of architecture layer * vector length * 4\n",
-    "n_input = 500000\n",
+    "n_input = 50000\n",
     "print('n_samples: {}'.format(n_samples))\n",
     "print('n_input: {}'.format(n_input))\n",
     "size_bytes = n_input * 100 * 4\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,16 +265,20 @@
     "    # Training cycle\n",
     "    for epoch in range(training_epochs):\n",
     "        avg_cost = 0.\n",
-    "        total_batch = int(n_samples / batch_size)\n",
-    "        # Loop over all batches\n",
-    "        for i in range(total_batch):\n",
+    "        #total_batch = int(n_samples / batch_size)\n",
+    "        ## Loop over all batches\n",
+    "        #for i in range(total_batch):\n",
+    "        for batch in thingi10k_batch_generator(df, batch_size, flat=True, pad_length=n_input):\n",
+    "            if len(batch) != batch_size:\n",
+    "                continue\n",
     "            #batch_xs, _ = mnist.train.next_batch(batch_size)\n",
-    "            batch_xs = thingi10k_batch_generator(THINGI10K_INDEX_100, batch_size, flat=True, pad_length=True)\n",
+    "            #batch_xs = thingi10k_batch_generator(THINGI10K_INDEX_100, batch_size, flat=True, pad_length=True)\n",
     "            # thingi10k_batch_generator\n",
     "            # Fit training using batch data\n",
-    "            cost = vae.partial_fit(batch_xs)\n",
+    "            cost = vae.partial_fit(batch)\n",
     "            # Compute average loss\n",
-    "            avg_cost += cost / n_samples * batch_size\n",
+    "            #avg_cost += cost / n_samples * batch_size\n",
+    "            avg_cost += cost / n_samples * len(batch)\n",
     "\n",
     "        # Display logs per epoch step\n",
     "        if epoch % display_step == 0:\n",
@@ -285,9 +289,631 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0001 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0006 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0011 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0016 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0021 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0026 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0031 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0036 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0041 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0046 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0051 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0056 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0061 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0066 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "Epoch: 0071 cost= nan\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n",
+      "go!\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "network_architecture = \\\n",
     "    dict(n_hidden_recog_1=500, # 1st layer encoder neurons\n",
@@ -343,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
