quick eda on size of stl objects

--- a/notebooks/stl_vae.ipynb
+++ b/notebooks/stl_vae.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,6 +285,31 @@
     "            print(\"Epoch:\", '%04d' % (epoch+1), \n",
     "                  \"cost=\", \"{:.9f}\".format(avg_cost))\n",
     "    return vae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50000\n",
+      "<class 'numpy.ndarray'>\n",
+      "[-17.5          3.8218081  142.83580017 ...   0.           0.\n",
+      "   0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 20\n",
+    "for batch in thingi10k_batch_generator(df, batch_size, flat=True, pad_length=n_input):\n",
+    "    print(len(batch[0]))\n",
+    "    print(type(batch[0]))\n",
+    "    print(batch[0])\n",
+    "    break"
    ]
   },
   {
