produced a 3d object with a vaegit add --allgit add --all!

--- a/notebooks/thingi10k_eda.ipynb
+++ b/notebooks/thingi10k_eda.ipynb
@@ -356,6 +356,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STL Coordinates\n",
+    "\n",
+    "Are coordinates all positive?\n",
+    "\n",
+    "From [Wikipedia](https://en.wikipedia.org/wiki/STL_(file_format)), \"In the original specification, all STL coordinates were required to be positive numbers, but this restriction is no longer enforced and negative coordinates are commonly encountered in STL files today.\"\n",
+    "\n",
+    "This means that we will likely need to normalize our coordinates. What's the best way to do so?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import env\n",
+    "from data.thingi10k import thingi10k_batch_generator, thingi10k_df, thingi10k_max_length\n",
+    "from data import THINGI10K_INDEX_100\n",
+    "df = thingi10k_df(THINGI10K_INDEX_100, pctile=.80)\n",
+    "n_samples = len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      "10\n",
+      "2430\n",
+      "142.8358\n",
+      "-27.47818\n",
+      "****\n",
+      "10\n",
+      "4752\n",
+      "1.21691\n",
+      "-4.1723297e-07\n",
+      "****\n",
+      "10\n",
+      "39204\n",
+      "42.541275\n",
+      "-29.113377\n",
+      "****\n",
+      "10\n",
+      "95760\n",
+      "50.390003\n",
+      "0.0\n",
+      "****\n",
+      "10\n",
+      "86616\n",
+      "29.5\n",
+      "-29.5\n",
+      "****\n",
+      "10\n",
+      "161460\n",
+      "5.829913\n",
+      "-5.152635\n",
+      "****\n",
+      "10\n",
+      "66834\n",
+      "59.49368\n",
+      "-32.09416\n",
+      "****\n",
+      "9\n",
+      "17856\n",
+      "55.45684\n",
+      "-23.35605\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in thingi10k_batch_generator(df, 10, flat=True):\n",
+    "    print('****')\n",
+    "    print(len(batch))\n",
+    "    print(len(batch[0]))\n",
+    "    print(batch[0].max())\n",
+    "    print(batch[0].min())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
