stl_vae now produces a correctly formatted stl object

--- a/notebooks/fun_with_stl.ipynb
+++ b/notebooks/fun_with_stl.ipynb
@@ -644,8 +644,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_model.save('_output/creating_an_stl_mesh_from_vectors.stl')\n",
-    "# "
+    "new_model.save('_output/creating_an_stl_mesh_from_vectors.stl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confirmed that the above saved model works outside of this notebook in the Win10 3D Print STL Viewer!"
    ]
   },
   {
